.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingEffectContext_pipe.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectContext_pipe.ts(10,51): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA`. effect(missingEffectContext)


==== /.src/missingEffectContext_pipe.ts (1 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    import { pipe } from "effect/Function"
    
    class ServiceA extends Effect.Service<ServiceA>()("ServiceA", {
      succeed: { a: 1 }
    }) {}
    
    // @ts-expect-error
    pipe(ServiceA, Effect.flatMap(() => Effect.void), Effect.runPromise)
                                                      ~~~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA`. effect(missingEffectContext)
    
